Fixed recap images looking cropped before animation starts

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -297,6 +297,7 @@
     %recap-image {
       position: absolute;
       overflow: hidden;
+      opacity: 0;
 
       img {
         object-fit: cover;
